--- a/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-     <plurals name="delete_files_confirm">
+    <plurals name="delete_files_confirm">
         <item quantity="other">Ştergeţi %1$d fişiere</item>
         <item quantity="zero">Ştergeţi %1$d fişiere</item>
         <item quantity="one">Ştergeţi 1 fişier</item>
@@ -8,7 +8,7 @@
         <item quantity="few">Ştergeţi %1$d fişiere</item>
         <item quantity="many">Ştergeţi %1$d fişiere</item>
      </plurals>
-     <plurals name="delete_folders_confirm">
+    <plurals name="delete_folders_confirm">
         <item quantity="other">" şi %1$d dosare?"</item>
         <item quantity="zero">" şi %1$d dosare?"</item>
         <item quantity="one">" şi 1 dosar?"</item>
@@ -16,7 +16,7 @@
         <item quantity="few">" şi %1$d dosare?"</item>
         <item quantity="many">" şi %1$d dosare?"</item>
      </plurals>
-     <plurals name="directory_item_count">
+    <plurals name="directory_item_count">
         <item quantity="other">%d elemente</item>
         <item quantity="zero">%d elemente</item>
         <item quantity="one">1 element</item>
@@ -24,7 +24,7 @@
         <item quantity="few">%d elemente</item>
         <item quantity="many">%d elemente</item>
      </plurals>
-     <plurals name="ui_bar_txt_download_progress">
+    <plurals name="ui_bar_txt_download_progress">
         <item quantity="other">%1$d fişiere de descărcat</item>
         <item quantity="zero">%1$d fişiere de descărcat</item>
         <item quantity="one">1 fişier de descărcat</item>
@@ -32,7 +32,7 @@
         <item quantity="few">%1$d fişiere de descărcat</item>
         <item quantity="many">%1$d fişiere de descărcat</item>
      </plurals>
-     <plurals name="ui_bar_txt_upload_progress">
+    <plurals name="ui_bar_txt_upload_progress">
         <item quantity="other">%1$d fişiere de încărcat</item>
         <item quantity="zero">%1$d fişiere de încărcat</item>
         <item quantity="one">1 fişier de încărcat</item>
@@ -40,7 +40,15 @@
         <item quantity="few">%1$d fişiere de încărcat</item>
         <item quantity="many">%1$d fişiere de încărcat</item>
      </plurals>
-      <plurals name="numSelectedFile">
+    <plurals name="ui_bar_txt_transport_progress">
+        <item quantity="other">%1$d fișiere rămase de transmis</item>
+        <item quantity="zero">%1$d fișiere rămase de transmis</item>
+        <item quantity="one">%1$d fișier rămas de transmis</item>
+        <item quantity="two">%1$d fișiere rămase de transmis</item>
+        <item quantity="few">%1$d fișiere rămase de transmis</item>
+        <item quantity="many">%1$d fișiere rămase de transmis</item>
+    </plurals>
+    <plurals name="numSelectedFile">
         <item quantity="other">%1$d selectate</item>
         <item quantity="zero">%1$d selectate</item>
         <item quantity="one">%1$d selectat</item>
@@ -48,7 +56,7 @@
         <item quantity="few">%1$d selectate</item>
         <item quantity="many">%1$d selectate</item>
      </plurals>
-     <plurals name="items_file">
+    <plurals name="items_file">
         <item quantity="other"> (%1$d elemente)</item>
         <item quantity="zero"> (%1$d elemente)</item>
         <item quantity="one"> (%1$d element)</item>
@@ -119,6 +127,38 @@
         <item quantity="two">cu %1$d zile în urmă</item>
         <item quantity="few">cu %1$d zile în urmă</item>
         <item quantity="many">cu %1$d zile în urmă</item>
+    </plurals>
+    <plurals name="seconds">
+        <item quantity="other">%1$d secunde</item>
+        <item quantity="zero">%1$d secunde</item>
+        <item quantity="one">%1$d secundă</item>
+        <item quantity="two">%1$d secunde</item>
+        <item quantity="few">%1$d secunde</item>
+        <item quantity="many">%1$d secunde</item>
+    </plurals>
+    <plurals name="mins">
+        <item quantity="other">%1$d minute</item>
+        <item quantity="zero">%1$d minute</item>
+        <item quantity="one">%1$d minut</item>
+        <item quantity="two">%1$d minute</item>
+        <item quantity="few">%1$d minute</item>
+        <item quantity="many">%1$d minute</item>
+    </plurals>
+    <plurals name="hours">
+        <item quantity="other">%1$d ore</item>
+        <item quantity="zero">%1$d ore</item>
+        <item quantity="one">%1$d oră</item>
+        <item quantity="two">%1$d ore</item>
+        <item quantity="few">%1$d ore</item>
+        <item quantity="many">%1$d ore</item>
+    </plurals>
+    <plurals name="days">
+        <item quantity="other">%1$d zile</item>
+        <item quantity="zero">%1$d zile</item>
+        <item quantity="one">%1$d zi</item>
+        <item quantity="two">%1$d zile</item>
+        <item quantity="few">%1$d zile</item>
+        <item quantity="many">%1$d zile</item>
     </plurals>
     <plurals name="found_new_files">
         <item quantity="other">Au fost găsite %1$d fişiere noi</item>
@@ -208,6 +248,14 @@
         <item quantity="few">%1$s videoclipuri</item>
         <item quantity="many">%1$s videoclipuri</item>
     </plurals>
+    <plurals name="follower_num">
+        <item quantity="other">urmăritori</item>
+        <item quantity="zero">urmăritori</item>
+        <item quantity="one">urmăritor</item>
+        <item quantity="two">urmăritori</item>
+        <item quantity="few">urmăritori</item>
+        <item quantity="many">urmăritori</item>
+    </plurals>
     <plurals name="user_upload_items">
         <item quantity="other">videoclipuri</item>
         <item quantity="zero">videoclipuri</item>
@@ -215,5 +263,21 @@
         <item quantity="two">videoclipuri</item>
         <item quantity="few">videoclipuri</item>
         <item quantity="many">videoclipuri</item>
+    </plurals>
+    <plurals name="number_of_comment">
+        <item quantity="other">%1$s comentarii</item>
+        <item quantity="zero">%1$s comentarii</item>
+        <item quantity="one">%1$s comentariu</item>
+        <item quantity="two">%1$s comentarii</item>
+        <item quantity="few">%1$s comentarii</item>
+        <item quantity="many">%1$s comentarii</item>
+    </plurals>
+    <plurals name="video_count">
+        <item quantity="other">%1$s videoclipuri</item>
+        <item quantity="zero">%1$s videoclipuri</item>
+        <item quantity="one">%1$s videoclip</item>
+        <item quantity="two">%1$s videoclipuri</item>
+        <item quantity="few">%1$s videoclipuri</item>
+        <item quantity="many">%1$s videoclipuri</item>
     </plurals>
 </resources>
