--- a/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-     <string-array name="transformation_entries">
+    <string-array name="transformation_entries">
         <item>Glisare cu salt</item>
         <item>Glisare</item>
         <item>Estompare</item>
@@ -8,14 +8,18 @@
         <item>Pagină</item>
         <item>Cascadă</item>
         <item>Rotire</item>
-        <item>Cub 3D</item>
+        <item>Cub</item>
      </string-array>
-      <string-array name="wallpaper_scroll_entries">
+    <string-array name="wallpaper_scroll_entries">
         <item>Setată de temă</item>
         <item>În centru</item>
         <item>La stânga</item>
         <item>La dreapta</item>
      </string-array>
+    <string-array name="cell_layout_size_entries">
+        <item>4x4</item>
+        <item>4x5</item>
+    </string-array>
       <string-array name="gadget_weather_theme_type_entries">
         <item>Prestabilită</item>
         <item>Clasică</item>
@@ -47,7 +51,7 @@
         <item>Praf</item>
         <item>Ceaţă</item>
      </string-array>
-      <string-array name="editing_mode_entries">
+    <string-array name="editing_mode_entries">
         <item>Mutare aplicaţii</item>
         <item>Obiecte widget</item>
         <item>Imagini de fundal</item>
